fix: Refactored styles to ensure text visiblity

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,8 +1,5 @@
 :root {
-  font-family: Inter, Helvetica, Arial, sans-serif;
-
   color-scheme: light dark;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -25,6 +22,10 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+}
+
+#backdrop + div {
+  position: relative;
 }
 
 .backdrop--dark {
